# experiments

./: .gitignore  vips.Dockerfile
.github/: cargo.yaml
.github/workflows/: cargo.yaml
thumbnail-test/: .gitignore
thumbnail-test/go-perftest/: go.mod  perftest  test.go
thumbnail-test/rust-perftest/: .gitignore  Cargo.toml  Cross.toml  vips.Dockerfile
thumbnail-test/rust-perftest/src/: main.rs
