[package]
name = "rust-perftest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libvips = "1.5.1"
sha1 = "0.10.5"

[profile.release]
lto = "fat"
opt-level = 3

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = ["dpkg --add-architecture arm64 && apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends tzdata libvips-dev"]